<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hsb.example</groupId>
    <artifactId>csgo-aimbot</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- 编译时的编码 -->
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <argLine>-Dfile.encoding=UTF-8</argLine>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
        <dependency>
            <groupId>org.openjdk.jol</groupId>
            <artifactId>jol-core</artifactId>
            <version>0.15</version>
        </dependency>
        <dependency>
            <groupId>opencv</groupId>
            <artifactId>opencv</artifactId>
            <systemPath>G:/kaifa_environment/opencv/opencv_4_8/opencv/build/java/opencv-480.jar</systemPath>
            <scope>system</scope>
            <version>4.8.0</version>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <plugin>
                <!-- 指定maven编译的jdk版本,如果不指定,maven3默认用jdk 1.5 maven2默认用jdk1.3 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.tk=csgo.aimbot</arg>
                        <arg>--add-opens=javafx.graphics/com.sun.glass.ui=csgo.aimbot</arg>
                        <arg>--add-opens=javafx.graphics/javafx.stage=csgo.aimbot</arg>
                        <arg>--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=csgo.aimbot</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
